--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = teensy40
+default_envs = primary
 
 ; You MUST inject these options into [env:] section
 ; using ${common_env_data.***} (see below)
 [common_env_data]
 build_flags =
     -D VERSION=0.0.1
-    -D DEBUG=1
+    -D DEBUG
     -D TEENSY_OPT_SMALLEST_CODE
 
-[env:teensy40]
+[env:primary]
+platform = teensy
+board = teensy40
+framework = arduino
+upload_protocol = teensy-gui
+build_flags = -D PRIMARY
+
+[env:aux]
 platform = teensy
 board = teensy40
 framework = arduino
