Adds ArduinoLog lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ build_flags =
 platform = teensy
 board = teensy40
 framework = arduino
+upload_port = /dev/ttyACM0
 upload_protocol = teensy-gui
 build_flags = -D PRIMARY
 
@@ -29,4 +30,5 @@ build_flags = -D PRIMARY
 platform = teensy
 board = teensy40
 framework = arduino
+upload_port = /dev/ttyACM1
 upload_protocol = teensy-gui
